--- a/cldf/requirements.txt
+++ b/cldf/requirements.txt
@@ -2,22 +2,31 @@ appdirs==1.4.4
 bs4==0.0.1
 cchardet==2.1.7
 certifi==2021.5.30
-chardet==4.0.0
+cffi==1.15.0
+chardet==3.0.4
 cldfbench==1.7.1
 cldfcatalog==1.3.2
-clldutils==3.9.0
+cldfviz==0.7.0
+clldutils==3.11.1
+colorama==0.4.4
 colorlog==5.0.1
 csvw==1.11.0
+cycler==0.11.0
 decorator==4.4.2
 defusedxml==0.7.1
 gitdb==4.0.7
 greenlet==1.1.0
+html5lib==1.1
 idna==2.10
 iniconfig==1.1.1
 isodate==0.6.0
+Jinja2==3.0.1
+kiwisolver==1.4.0
 lingpy==2.6.8
 lxml==4.6.3
 Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.5.1
 nameparser==1.0.6
 networkx==2.5.1
 newick==1.3.0
@@ -28,12 +37,13 @@ pluggy==0.13.1
 purl==1.6
 py==1.10.0
 pybtex==0.24.0
-pycldf==1.22.0
+pycldf==1.25.1
 pyclts==3.1.1
 pyconcepticon==2.8.0
 pycountry==20.7.3
 pyglottolog==3.6.0
-pylexibank==3.2.0
+pylexibank==3.3.0
+pyparsing==2.4.7
 pytest==6.2.4
 regex==2021.7.6
 requests==2.25.1
@@ -42,11 +52,13 @@ segments==2.2.0
 six==1.16.0
 smmap==4.0.0
 soupsieve==2.2.1
-SQLAlchemy==1.4.20
+SQLAlchemy==1.4.27
 tabulate==0.8.9
 termcolor==1.1.0
 tqdm==4.61.2
 uritemplate==3.0.1
 urllib3==1.26.6
+webencodings==0.5.1
 xlrd==2.0.1
+yattag==1.14.0
 zenodoclient==0.4.1
