--- a/cldf/requirements.txt
+++ b/cldf/requirements.txt
@@ -1,64 +1,74 @@
 appdirs==1.4.4
+arrow==1.2.3
+Babel==2.11.0
 bs4==0.0.1
-cchardet==2.1.7
-certifi==2021.5.30
-cffi==1.15.0
-chardet==3.0.4
-cldfbench==1.7.1
-cldfcatalog==1.3.2
-cldfviz==0.7.0
-clldutils==3.11.1
-colorama==0.4.4
-colorlog==5.0.1
-csvw==1.11.0
+certifi==2022.12.7
+cldfbench==1.13.0
+cldfcatalog==1.5.1
+cldfviz==0.12.0
+cldfzenodo==1.1.0
+clldutils==3.19.0
+colorama==0.4.6
+colorlog==6.7.0
+csvw==3.1.3
 cycler==0.11.0
-decorator==4.4.2
-defusedxml==0.7.1
-gitdb==4.0.7
-greenlet==1.1.0
+exceptiongroup==1.0.4
+gitdb==4.0.10
+greenlet==2.0.1
 html5lib==1.1
-idna==2.10
+idna==3.4
 iniconfig==1.1.1
-isodate==0.6.0
-Jinja2==3.0.1
-kiwisolver==1.4.0
-lingpy==2.6.8
-lxml==4.9.1
-Markdown==3.3.4
-MarkupSafe==2.0.1
-matplotlib==3.5.1
-nameparser==1.0.6
-networkx==2.5.1
-newick==1.3.0
-numpy==1.23.1
-openpyxl==3.0.7
-packaging==21.0
-pluggy==0.13.1
+isodate==0.6.1
+Jinja2==3.1.2
+jmespath==1.0.1
+jsonschema==4.17.3
+kiwisolver==1.4.4
+lingpy==2.6.9
+lxml==4.9.2
+Markdown==3.4.1
+MarkupSafe==2.1.1
+matplotlib==3.6.2
+multipledispatch==0.6.0
+nameparser==1.1.2
+networkx==3.0
+newick==1.9.0
+numpy==1.24.0
+openpyxl==3.1.2
+packaging==22.0
+pluggy==1.0.0
 purl==1.6
-py==1.10.0
 pybtex==0.24.0
-pycldf==1.26.1
+pycldf==1.34.0
 pyclts==3.1.1
-pyconcepticon==2.8.0
-pycountry==20.7.3
-pyglottolog==3.6.0
-pylexibank==3.3.0
-pyparsing==2.4.7
-pytest==6.2.4
-regex==2021.7.6
-requests==2.25.1
+pyconcepticon==3.0.0
+pycountry==22.3.5
+pyglottolog==3.11.0
+pylatexenc==2.10
+pylexibank==3.4.0
+pyparsing==3.0.9
+pyrsistent==0.19.2
+pytest==7.2.0
+python-dateutil==2.8.2
+python-frontmatter==1.0.0
+python-nexus==2.9.0
+pytz==2022.7
+rdflib==6.2.0
+regex==2022.10.31
+reportlab==3.6.12
+requests==2.28.1
 rfc3986==1.5.0
-segments==2.2.0
+segments==2.2.1
 six==1.16.0
-smmap==4.0.0
-soupsieve==2.2.1
-SQLAlchemy==1.4.27
-tabulate==0.8.9
-termcolor==1.1.0
-tqdm==4.61.2
-uritemplate==3.0.1
-urllib3==1.26.6
+smmap==5.0.0
+soupsieve==2.3.2.post1
+SQLAlchemy==1.4.45
+tabulate==0.9.0
+termcolor==2.1.1
+toyplot==1.0.3
+toytree==2.0.1
+tqdm==4.64.1
+uritemplate==4.1.1
+urllib3==1.26.13
 webencodings==0.5.1
 xlrd==2.0.1
-yattag==1.14.0
-zenodoclient==0.4.1
+zenodoclient==0.5.0
