--- a/cldf/requirements.txt
+++ b/cldf/requirements.txt
@@ -1,74 +1,77 @@
 appdirs==1.4.4
-arrow==1.2.3
-Babel==2.11.0
-bs4==0.0.1
-certifi==2022.12.7
-cldfbench==1.13.0
+arrow==1.3.0
+attrs==24.2.0
+babel==2.16.0
+bibtexparser==2.0.0b7
+bs4==0.0.2
+Cartopy==0.24.1
+certifi==2024.8.30
+chardet==5.2.0
+cldfbench==1.14.0
 cldfcatalog==1.5.1
-cldfviz==0.12.0
-cldfzenodo==1.1.0
-clldutils==3.19.0
+-e git+https://github.com/cldf/cldfviz@624f57ba022675ddd2343a08ed02adc9785f02f8#egg=cldfviz
+cldfzenodo==2.1.2
+clldutils==3.24.0
 colorama==0.4.6
-colorlog==6.7.0
-csvw==3.1.3
-cycler==0.11.0
-exceptiongroup==1.0.4
-gitdb==4.0.10
-greenlet==2.0.1
-html5lib==1.1
-idna==3.4
-iniconfig==1.1.1
-isodate==0.6.1
-Jinja2==3.1.2
+colorlog==6.9.0
+commonnexus==1.9.2
+csvw==3.5.1
+cycler==0.12.1
+gitdb==4.0.11
+greenlet==3.1.1
+idna==3.10
+iniconfig==2.0.0
+isodate==0.7.2
+Jinja2==3.1.4
 jmespath==1.0.1
-jsonschema==4.17.3
-kiwisolver==1.4.4
-lingpy==2.6.9
-lxml==4.9.2
-Markdown==3.4.1
-MarkupSafe==2.1.1
-matplotlib==3.6.2
-multipledispatch==0.6.0
-nameparser==1.1.2
-networkx==3.0
+jsonschema==4.23.0
+kiwisolver==1.4.7
+lingpy==2.6.13
+lxml==5.3.0
+Markdown==3.7
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+multipledispatch==1.0.0
+nameparser==1.1.3
+networkx==3.4.2
 newick==1.9.0
-numpy==1.24.0
-openpyxl==3.1.2
-packaging==22.0
-pluggy==1.0.0
-purl==1.6
+numpy==2.1.3
+openpyxl==3.1.5
+packaging==24.2
+pluggy==1.5.0
 pybtex==0.24.0
-pycldf==1.34.0
-pyclts==3.1.1
-pyconcepticon==3.0.0
-pycountry==22.3.5
-pyglottolog==3.11.0
+-e git+https://github.com/cldf/pycldf@45a1578d54dbe28426b1b0ad96ec81bd9c0f5cb3#egg=pycldf
+pyclts==3.2.0
+pyconcepticon==3.1.0
+pycountry==24.6.1
+-e git+https://github.com/lexibank/pyetymdict@0b7e3ae18c1fdfca29c182a84d794060fcb27b95#egg=pyetymdict
+pyglottolog==3.14.0
 pylatexenc==2.10
-pylexibank==3.4.0
-pyparsing==3.0.9
-pyrsistent==0.19.2
-pytest==7.2.0
-python-dateutil==2.8.2
-python-frontmatter==1.0.0
-python-nexus==2.9.0
-pytz==2022.7
-rdflib==6.2.0
-regex==2022.10.31
-reportlab==3.6.12
-requests==2.28.1
+pylexibank==3.5.0
+pyparsing==3.2.0
+pyproj==3.7.0
+pytest==8.3.3
+python-dateutil==2.9.0.post0
+python-frontmatter==1.1.0
+rdflib==7.1.1
+referencing==0.35.1
+regex==2024.11.6
+reportlab==4.2.5
+requests==2.32.3
 rfc3986==1.5.0
+scipy==1.14.1
 segments==2.2.1
+shapely==2.0.6
 six==1.16.0
-smmap==5.0.0
-soupsieve==2.3.2.post1
-SQLAlchemy==1.4.45
+smmap==5.0.1
+soupsieve==2.6
+SQLAlchemy==1.4.54
 tabulate==0.9.0
-termcolor==2.1.1
-toyplot==1.0.3
-toytree==2.0.1
-tqdm==4.64.1
+termcolor==2.5.0
+toyplot==2.0.0
+toytree==2.0.5
+tqdm==4.67.1
 uritemplate==4.1.1
-urllib3==1.26.13
-webencodings==0.5.1
+urllib3==2.2.3
 xlrd==2.0.1
-zenodoclient==0.5.0
+zenodoclient==0.5.1
